# bare-webp

./: .gitignore  CMakeLists.txt  README.md  binding.c  index.js  package.json  test.js
patches/: 01-webp-windows-clang.patch
